# quant-trading-workflows

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
launch_plans/: development.py  production.py
models/distilbert-finance-sentiment/: config.json  model_quantized.onnx  ort_config.json  tokenizer.json
scripts/: backfill.py  export_sentiment_model.py  run_local.sh
sql/: schema.sql
src/shared/: analytics.py  config.py  db.py  models.py  storage.py
src/shared/inference/: base.py  onnx_cpu.py
src/shared/providers/: base.py  finnhub_provider.py  marketaux_provider.py  sentiment_base.py  yfinance_provider.py
src/wf1_data_ingestion/: tasks.py  workflow.py
src/wf2_universe_screening/: tasks.py  workflow.py
src/wf3_signal_analysis/: tasks.py  workflow.py
src/wf4_portfolio_rebalancing/: tasks.py  workflow.py
src/wf5_monitoring/: tasks.py  workflow.py
src/wf6_backtesting/: tasks.py  workflow.py
tests/: conftest.py  test_dividends.py  test_inference.py  test_models.py  test_providers.py  test_sentiment_analytics.py  test_sentiment_providers.py  test_storage.py  test_wf1.py  test_wf2.py  test_wf3.py  test_wf4.py  test_wf5.py  test_wf6.py
