[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-workflows"
version = "0.1.0"
description = "Quant Trading Workflows for Pi Cluster - Flyte-orchestrated trading system inspired by Norwegian Government Pension Fund"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flytekit>=1.16.0,<1.17",
    "pandas>=2.0.0,<4",
    "requests>=2.31.0,<3",
    "yfinance>=1.0.0,<2",
    "psycopg2-binary>=2.9.0,<3",
    "numpy>=1.24.0,<3",
    "pyarrow>=14.0.0,<24",
    "boto3>=1.34.0,<2",
    "scikit-learn>=1.3.0,<2",
    "finnhub-python>=2.4.0,<3",
    "onnxruntime>=1.17.0,<2",
    "transformers>=4.36.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
]

[tool.setuptools.packages.find]
include = ["src*", "launch_plans*"]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
